# InteractiveComputerGraphics

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindVulkan.cmake
Resources/Chicken/: Chicken.mtl  Eyes.mtl
Resources/Cornell/: texture.ktx
Resources/Dachboden/: Dachboden_500K.mtl  Dachboden_500K_u1_v1.ktx
Resources/Defaults/: UV_Grid_Lrg.ktx  UV_Grid_Sm.ktx  missing-texcube.ktx  missing-texture.ktx  missing-volume.ktx
Resources/MaterialShaders/HaloMaterials/UniformColoredPoints/: shader.vert  vert.spv
Resources/MaterialShaders/Standard/Blinn/: frag.spv  shader.frag  shader.vert  vert.spv
Resources/MaterialShaders/Standard/CubemapReflectionSurface/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/Depth/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/EyeSpaceReflectionSurface/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/NormalSurface/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/Shadow/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/Skybox/: frag.spv  vert.spv
Resources/MaterialShaders/Standard/TexCoordSurface/: vert.spv
Resources/MaterialShaders/Standard/UniformColor/: frag.spv  shader.frag  shader.vert  vert.spv
Resources/MaterialShaders/SurfaceMaterials/BlinnReflectionSurface/: frag.spv  shader.frag  shader.vert  vert.spv
Resources/MaterialShaders/SurfaceMaterials/BlinnSurface/: frag.spv  shader.frag  shader.vert  vert.spv
Resources/MaterialShaders/SurfaceMaterials/CubemapReflectionSurface/: frag.spv  shader.frag  shader.vert  (+1 more)
Resources/MaterialShaders/UniformColoredPoints/: shader.vert  vert.spv
Resources/SkyboxTextures/Cem/: cubemap_ASTC8X8_unorm.ktx  cubemap_BC2_unorm.ktx  cubemap_etc2_unorm.ktx  floor.ktx
Resources/TutorialShaders/: vert.spv
Resources/TutorialShaders/DepthShader/: frag.spv  shader.frag  vert.spv
Resources/TutorialShaders/HardcodedTriangle/: frag.spv
Resources/TutorialShaders/TextureShader/: vert.spv
Resources/TutorialShaders/UniformBufferShader/: vert.spv
Resources/TutorialShaders/VertexBufferShader/: vert.spv
Resources/TutorialTextures/: grid.ktx
Sources/: CMakeLists.txt
Sources/ECS/: CMakeLists.txt  ecs.hpp
Sources/ECS/Components/: CMakeLists.txt  Component.hpp
Sources/ECS/Components/Callbacks/: CMakeLists.txt  Callbacks.hpp
Sources/ECS/Components/Lights/: CMakeLists.txt  Light.hpp  Lights.hpp
Sources/ECS/Components/Lights/PointLight/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
Sources/ECS/Components/Materials/: CMakeLists.txt  Material.hpp  MaterialProperties.hpp  Materials.hpp  PipelineParameters.hpp
Sources/ECS/Components/Materials/Standard/: Blinn.hpp  CMakeLists.txt  Shadow.hpp  Skybox.hpp  UniformColor.hpp
Sources/ECS/Components/Materials/Standard/BlinnMaterials/: BlinnReflection.hpp  BlinnShadow.cpp  BlinnShadow.hpp  CMakeLists.txt  TexturedBlinn.hpp  TexturedBlinnShadow.cpp  TexturedBlinnShadow.hpp
Sources/ECS/Components/Materials/Standard/CubemapReflection/: CubemapReflection.hpp
Sources/ECS/Components/Materials/Standard/DepthTexture/: DepthTexture.cpp  DepthTexture.hpp
Sources/ECS/Components/Materials/Standard/EyeSpaceReflection/: EyeSpaceReflection.hpp
Sources/ECS/Components/Materials/Standard/Normal/: Normal.hpp
Sources/ECS/Components/Materials/Standard/Skybox/: Skybox.hpp
Sources/ECS/Components/Materials/Standard/TexCoord/: TexCoord.hpp
Sources/ECS/Components/Materials/Volume/: CMakeLists.txt  Raycast.hpp  Voxelize.hpp
Sources/ECS/Components/Math/: CMakeLists.txt  Perspective.cpp  Perspective.hpp  Transform.hpp
Sources/ECS/Components/Meshes/: CMakeLists.txt  Cube.hpp  Mesh.hpp  Meshes.hpp  OBJMesh.cpp  OBJMesh.hpp  Plane.hpp  Sphere.hpp
Sources/ECS/Components/Textures/: CMakeLists.txt  RenderableTexture2D.hpp  RenderableTextureCube.hpp  Texture.cpp  Texture.hpp  Texture2D.hpp  Texture3D.hpp  TextureCube.hpp  Textures.hpp
Sources/ECS/Entities/: Entity.hpp
Sources/ECS/Entities/Cameras/: CMakeLists.txt  Camera.hpp  CameraBufferObject.hpp  SpinTableCamera.hpp
Sources/ECS/Entities/Model/: Model.hpp
Sources/ECS/Systems/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.hpp  Engine.hpp  RenderSystem.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  Systems.cpp  Systems.hpp
Sources/ECS/Tools/: CMakeLists.txt  Color.hpp  FileReader.hpp
Sources/Main/: Main.hpp  Prj1Main.cpp  Prj2Main.cpp  Prj3Main.cpp  Prj4Main.cpp  Prj5Main.cpp  Prj6Main.cpp  Prj7Main.cpp  Prj8Main.cpp
Sources/Options/: Options.cpp  Options.h
Sources/SEC/: CMakeLists.txt
Sources/SEC/Components/: CMakeLists.txt  Mesh.hpp  Transform.hpp
Sources/SEC/Components/Materials/: CMakeLists.txt  Material.hpp
Sources/SEC/Components/Materials/HaloMaterials/: CMakeLists.txt  UniformColoredPoints.cpp  UniformColoredPoints.hpp
Sources/SEC/Components/Materials/SurfaceMaterials/: BlinnReflectionSurface.cpp  BlinnReflectionSurface.hpp  BlinnSurface.cpp  BlinnSurface.hpp  CMakeLists.txt  CubemapReflectionSurface.cpp  CubemapReflectionSurface.hpp  EyeSpaceReflectionSurface.cpp  EyeSpaceReflectionSurface.hpp  NormalSurface.cpp  NormalSurface.hpp  SkyboxSurface.cpp  SkyboxSurface.hpp  TexCoordSurface.cpp  TexCoordSurface.hpp  TexturedBlinnSurface.cpp  TexturedBlinnSurface.hpp  UniformColoredSurface.cpp  UniformColoredSurface.hpp
Sources/SEC/Components/Meshes/: CMakeLists.txt  Cube.hpp  Mesh.hpp  OBJMesh.hpp  Plane.hpp  Sphere.hpp
Sources/SEC/Components/Textures/: CMakeLists.txt  RenderableTexture2D.hpp  Texture.hpp  Texture2D.hpp  TextureCube.hpp
Sources/SEC/Entities/: CMakeLists.txt  Entity.hpp
Sources/SEC/Entities/Cameras/: CMakeLists.txt  Camera.hpp  OrbitCamera.hpp  PerspectiveCamera.hpp  SpinTableCamera.hpp
Sources/SEC/Entities/Lights/: CMakeLists.txt  Light.hpp
Sources/SEC/Entities/Model/: CMakeLists.txt  Model.hpp
Sources/SEC/System/: CMakeLists.txt  Scene.hpp  System.cpp  System.hpp
Sources/VKDE/: CMakeLists.txt  VKDE.cpp  VKDE.hpp  VKDE.i  VKDE_wrap.cxx
Sources/VKDK/: CMakeLists.txt  VulkanTools.cpp  VulkanTools.hpp  objload.h  vkdk.cpp  vkdk.hpp
(+30 files in other folders)
