add_subdirectory(ECS)
add_subdirectory(VKDK)
add_subdirectory(VKDE)

add_subdirectory(Options)

set(SHARED_SRC 
  ${Options_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Main.hpp
)

# PRJ1
set(PRJ1_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj1Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ2
set(PRJ2_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj2Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ3
set(PRJ3_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj3Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ4
set(PRJ4_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj4Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ5
set(PRJ5_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj5Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ6
set(PRJ6_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj6Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ7
set(PRJ7_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj7Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)

# PRJ8
set(PRJ8_SRC 
  ${SHARED_SRC}
  ${CMAKE_CURRENT_SOURCE_DIR}/Main/Prj8Main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
  PARENT_SCOPE)
